html2rdf/tests/snapshots/test_cases__rdfa1.1__html5-invalid__0295.html_processor_graph.snap
---
source: html2rdf/tests/test-cases.rs
expression: "utils::serialize_normalized_graph(processor_graph, base.as_str(),)"
---
@base <http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html> .
@prefix rdf: <//www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix xsd: <//www.w3.org/2001/XMLSchema#> .
@prefix rdfa: <//www.w3.org/ns/rdfa#> .
@prefix dc: <//purl.org/dc/terms/> .
_:c14n0 a rdfa:DocumentError ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Unexpected open element" ;
	rdfa:context "http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html" .
_:c14n1 a rdfa:PrefixRedefinition ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "ignoring attempt to add prefix assignment via @prefix for reserved prefix '_'" .
_:c14n10 a rdfa:DocumentError ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Unacknowledged self-closing tag" ;
	rdfa:context "http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html" .
_:c14n2 a rdfa:PrefixRedefinition ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "ignoring attempt to add prefix assignment via @xmlns for reserved prefix '_'" .
_:c14n3 a rdfa:DocumentError ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Unexpected open tag at end of body" ;
	rdfa:context "http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html" .
_:c14n4 a rdfa:Warning ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Invalid IRI: <> (No scheme found in an absolute IRI)" .
_:c14n5 a rdfa:Warning ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Invalid IRI: <> (No scheme found in an absolute IRI)" .
_:c14n6 a rdfa:Warning ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Invalid IRI: <> (No scheme found in an absolute IRI)" .
_:c14n7 a rdfa:Warning ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Invalid IRI: <> (No scheme found in an absolute IRI)" .
_:c14n8 a rdfa:DocumentError ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Unacknowledged self-closing tag" ;
	rdfa:context "http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html" .
_:c14n9 a rdfa:DocumentError ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "Unacknowledged self-closing tag" ;
	rdfa:context "http://rdfa.info/test-suite/test-cases/rdfa1.1/html5-invalid/0295.html" .
